# climate_awareness

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitmessage  .pre-commit-config.yaml  .prettierignore  Deploy.md  Makefile  README.md  docker-compose.yml  idea.md  map-brainstorm.md  map_idea.md  map_plan.md  plan.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  security.yml  test.yml
agents/: pyproject.toml
db/: Dockerfile
db/init/: 00-extensions.sql
docs/: deploy-runbook.md
research/: data-sources.md  gb-situation.md
web/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/drizzle/: 0000_complex_madame_masque.sql  0001_burly_cardiac.sql  0002_curious_multiple_man.sql  0003_steady_black_queen.sql  0004_curly_dazzler.sql  0005_add_state_index.sql  0006_alerts_source_url_unique.sql  0007_p1_leads_schema.sql  0008_ai_verification_subscribers.sql  0009_leads_submitter_email_idx.sql  0010_incident_relations_canonical_order.sql  0011_security_perf_fixes.sql
web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
web/scripts/: backfill-seed-locations.ts  create-admin.ts  fix-migrations.ts  fix-source-urls.ts  migrate.ts  seed-events.ts  seed-locations.ts  seed-sources.ts  test-rag.ts
web/src/: middleware.ts
web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/about/: page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/admin/(protected)/: layout.tsx  page.tsx
web/src/app/admin/(protected)/alerts/: page.tsx
web/src/app/admin/(protected)/contributors/: ContributorActions.tsx  page.tsx
web/src/app/admin/(protected)/events/: page.tsx
web/src/app/admin/(protected)/leads/: page.tsx
web/src/app/admin/events/: page.tsx
web/src/app/admin/events/new/: page.tsx
web/src/app/admin/login/: page.tsx
web/src/app/alerts/: page.tsx
web/src/app/api/events/: route.ts
web/src/app/api/leads/: route.ts
web/src/app/api/subscribe/: route.ts
web/src/app/ask/: AskPageClient.tsx  page.tsx
web/src/app/contact/: page.tsx
web/src/app/events/[id]/: page.tsx
web/src/app/login/: page.tsx
web/src/app/map/: MapPageClient.tsx  page.tsx
web/src/app/report/: ReportForm.tsx  page.tsx
web/src/app/subscribe/: page.tsx
web/src/app/take-action/: page.tsx
web/src/app/volunteer/: page.tsx
web/src/components/: DisclaimerModal.tsx  ShareButtons.tsx  StatCounter.tsx
web/src/components/map/: MapView.tsx
web/src/lib/: api-error.ts  auth-guard.ts  auth.config.ts  auth.ts  constants.ts  db.ts  ip-block.ts  leads-queries.ts  leads-state.ts  leads-submission-schema.ts  logger.ts  oembed.ts  queries.ts  sanitize.ts  schema.ts
web/src/lib/__tests__/: geojson-contract.test.ts  leads-state.test.ts  leads-submission.test.ts  seed-locations.test.ts  taxonomy.test.ts
web/src/lib/agent/: embed.ts  graph.ts  guardrails.ts  llm.ts  rate-limit.ts  types.ts  vectorstore.ts
worker/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
worker/src/: db.ts  index.ts  logger.ts
worker/src/jobs/: check-alerts.ts  check-pdma.ts  cleanup.ts  embed-events.ts  push-notify.ts  refresh-weather.ts  verify-alerts.ts
(+23 files in other folders)
